fixed menu-search icon alignment

--- a/scss/forms/_menu-search.scss
+++ b/scss/forms/_menu-search.scss
@@ -119,7 +119,7 @@
 
 			.theicon {
 				padding: 0;
-				margin: 1.125em 0 .5em .875em;
+				margin: 1em 0 .5em .75em;
 				width: 24px;
 				height: 24px;
 				border: 0;
