--- a/scss/widgets/_footer-widgets.scss
+++ b/scss/widgets/_footer-widgets.scss
@@ -66,10 +66,6 @@
 		text-align: center;
 		width: 20%;
 
-		@include breakpoint(phone-h) {
-			padding: .925em 0;
-		}
-
 		&:hover,
 		&:focus {
 			background: $color__base;
